--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-spinners": "^0.14.1",
     "spinners": "^1.2.2",
     "swr": "^2.2.5",
+    "vercel": "^34.3.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
